--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /Lingo Dungo/Temp
 /Lingo Dungo/.vs
 /Lingo Dungo/Library
+Lingo Dungo/Library/ArtifactDB
+Lingo Dungo/Library/SourceAssetDB
+/Lingo Dungo/Logs
+*.log
